--- a/demo/css/web-end.css
+++ b/demo/css/web-end.css
@@ -723,6 +723,15 @@
     color: #fff;
   }
 
+  .footer-inner {
+    width: 100%;
+  }
+
+  .footer-inner h1 {
+    width: 90%;
+    margin: 0 auto;
+  }
+
   .footer__wrapper {
     padding-top: 50px;
   }
@@ -743,7 +752,7 @@
 
   .footer__links li {
     width: 50%;
-    margin-bottom: 30px;
+    margin: 0 20px 30px 20px;
     padding: 5px;
   }
 
@@ -758,7 +767,7 @@
   }
 
   .footer__newsletter {
-    margin: 0 auto;
+    margin: 20px;
     width: 80%;
     order: 1;
     padding: 0;
