--- a/demo/css/index.css
+++ b/demo/css/index.css
@@ -1,5 +1,32 @@
 /* 走马灯 */
 @media screen and (min-width:1200px) {
+  .view-slide {
+    position: relative;
+  }
+
+  .visual_areaTxt {
+    font-family: 'Courier New', Courier, monospace;
+    width: 70%;
+    box-sizing: border-box;
+    position: absolute;
+    z-index: 2;
+    top: 50%;
+    left: 10%;
+    color: #fff;
+    opacity: 1;
+    padding: 0 20px;
+    margin-top: 28px;
+  }
+
+  .visual_inner .visual_title {
+    font-size: 66px;
+  }
+
+  .visual_inner .visual_text {
+    margin: 0;
+    font-size: 30px;
+  }
+
   .carousel {
     height: calc(100vh - 80px);
     margin-top: 0px;
@@ -438,6 +465,33 @@
 }
 
 @media screen and (max-width:1200px) and (min-width:760px) {
+  .view-slide {
+    position: relative;
+  }
+
+  .visual_areaTxt {
+    font-family: 'Courier New', Courier, monospace;
+    width: 80%;
+    box-sizing: border-box;
+    position: absolute;
+    z-index: 2;
+    top: 50%;
+    left: 10%;
+    color: #fff;
+    opacity: 1;
+    padding: 0 20px;
+    margin-top: 28px;
+  }
+
+  .visual_inner .visual_title {
+    font-size: 60px;
+  }
+
+  .visual_inner .visual_text {
+    margin: 0;
+    font-size: 26px;
+  }
+
   .carousel {
     height: calc(100vh - 60px);
     margin-top: 0px;
@@ -883,6 +937,33 @@
 }
 
 @media screen and (max-width:760px) {
+  .view-slide {
+    position: relative;
+  }
+
+  .visual_areaTxt {
+    font-family: 'Courier New', Courier, monospace;
+    width: 90%;
+    box-sizing: border-box;
+    position: absolute;
+    z-index: 2;
+    top: 48.5%;
+    left: 5.5%;
+    color: #fff;
+    opacity: 1;
+    padding: 0 20px;
+    margin-top: 28px;
+  }
+
+  .visual_inner .visual_title {
+    font-size: 40px;
+  }
+
+  .visual_inner .visual_text {
+    margin: 0;
+    font-size: 18px;
+  }
+
   .carousel {
     height: calc(100vh - 60px);
     margin-top: 0px;
@@ -1359,23 +1440,6 @@
   }
 }
 
-.carousel-item {
-  position: relative;
-  overflow: hidden;
-}
-
-.carousel-item::after {
-  position: absolute;
-  top: 0;
-  left: 0;
-  content: "";
-  color: #fff;
-  background-color: rgb(99, 99, 99);
-  opacity: 0.2;
-  z-index: 1;
-  width: 100%;
-  height: 100%;
-}
 
 /* 关于我们 */
 .about-us {
