--- a/demo/css/header.css
+++ b/demo/css/header.css
@@ -11,7 +11,7 @@
   display: flex;
   justify-content: center;
   background-color: #fff;
-  transition: all .9s 0s cubic-bezier(.165, .84, .44, 1);
+  /* transition: all .9s 0s cubic-bezier(.165, .84, .44, 1); */
 }
 
 @media screen and (min-width:1200px) {
@@ -95,20 +95,20 @@
   .menu-item:hover {
     text-decoration: underline;
     color: #264989c5;
-    transition-duration: 0.35s;
+    transition-duration: 0.2s;
     transition-timing-function: ease-in-out;
     cursor: pointer;
   }
 
   .svg-down {
-    transition-duration: 0.35s;
+    transition-duration: 0.2s;
     transition-timing-function: ease-in-out;
   }
 
   .menu-item:hover>span>i {
-    transition: all .35s;
+    transition: all .2s;
     transform: rotate(180deg);
-    transition-duration: 0.35s;
+    transition-duration: 0.2s;
     transition-timing-function: ease-out;
   }
 
@@ -137,7 +137,7 @@
     background-color: #fff;
     position: relative;
     opacity: 1;
-    transition: all .3s 0s cubic-bezier(.165, .84, .44, 1);
+    transition: all .2s 0s cubic-bezier(.165, .84, .44, 1);
   }
 
   .expand>ul>li {
@@ -145,10 +145,8 @@
     float: left;
     display: block;
     font-size: 14px;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    transition: all .3s 0s cubic-bezier(.165, .84, .44, 1);
+    transition: all .2s 0s cubic-bezier(.165, .84, .44, 1);
+
   }
 
   .expand:hover>ul {
@@ -157,13 +155,13 @@
     position: absolute;
     top: 80px;
     left: 0;
-    transition: all .6s 0s cubic-bezier(.165, .84, .44, 1);
+    transition: all .25s 0s cubic-bezier(.165, .84, .44, 1);
   }
 
   .expand>ul>li:hover {
     color: #fff;
     background-color: #264989;
-    transition: all .6s 0s cubic-bezier(.165, .84, .44, 1);
+    transition: all .25s 0s cubic-bezier(.165, .84, .44, 1);
   }
 
   .expand>ul>li>a {
@@ -172,7 +170,10 @@
     color: #333;
     margin: 0;
     padding: 0.6rem 1.5rem 0.6rem 1.5rem;
-    transition: all .6s 0s cubic-bezier(.165, .84, .44, 1);
+    transition: all .25s 0s cubic-bezier(.165, .84, .44, 1);
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
   }
 
   .expand>ul>li:hover>a {
@@ -192,7 +193,7 @@
   }
 
   .nav-lan:hover>div>i {
-    transition-duration: 0.35s;
+    transition-duration: 0.2s;
     transition-timing-function: ease-out;
     transform: rotate(180deg);
   }
@@ -201,7 +202,7 @@
     text-decoration: underline;
     color: #264989c5;
     cursor: pointer;
-    transition-duration: 0.35s;
+    transition-duration: 0.2s;
     transition-timing-function: ease-out;
   }
 
@@ -215,7 +216,7 @@
     background-color: #fff;
     position: relative;
     opacity: 1;
-    transition: all .3s 0s cubic-bezier(.165, .84, .44, 1);
+    transition: all .2s 0s cubic-bezier(.165, .84, .44, 1);
   }
 
   .nav-lan .lan-select>li>a {
@@ -238,11 +239,12 @@
     cursor: pointer;
     opacity: 0.75;
     color: #264989;
-    transition: all .35s;
+    transition: all .2s cubic-bezier(.165, .84, .44, 1);
+    ;
   }
 
   .nav-search {
-    transition-duration: 0.35s;
+    transition-duration: 0.2s;
     transition-timing-function: ease-in;
   }
 
@@ -281,14 +283,14 @@
     color: #333;
     margin-left: 8px;
     padding: 6px;
-    padding: 6px 1rem 6px 1rem;
+    padding: 7px 1rem 7px 1rem;
     border: 2px solid #264989c7;
     border-radius: 0.45rem;
     background-color: #fff;
     outline: none;
     font-size: 16px;
     transition-property: background-color, color;
-    transition-duration: 0.5s;
+    transition-duration: 0.25s;
     transition-timing-function: ease-in-out;
   }
 
@@ -300,6 +302,7 @@
     transition-duration: 0.25s;
     transition-timing-function: ease-in-out;
   }
+
   /* 页面大于1200px */
 }
 
@@ -385,20 +388,19 @@
   .menu-item:hover {
     text-decoration: underline;
     color: #264989c5;
-    transition-duration: 0.35s;
+    transition-duration: 0.2s;
     transition-timing-function: ease-in-out;
     cursor: pointer;
   }
 
   .svg-down {
-    transition-duration: 0.35s;
+    transition-duration: 0.2s;
     transition-timing-function: ease-in-out;
   }
 
   .menu-item:hover>span>i {
-    transition: all .35s;
     transform: rotate(180deg);
-    transition-duration: 0.35s;
+    transition-duration: 0.2s;
     transition-timing-function: ease-out;
   }
 
@@ -414,7 +416,7 @@
   }
 
   .nav-lan:hover>div>i {
-    transition-duration: 0.35s;
+    transition-duration: 0.2s;
     transition-timing-function: ease-out;
     transform: rotate(180deg);
   }
@@ -423,7 +425,7 @@
     /* text-decoration: underline; */
     color: #264989c5;
     cursor: pointer;
-    transition-duration: 0.35s;
+    transition-duration: 0.2s;
     transition-timing-function: ease-out;
   }
 
@@ -437,7 +439,7 @@
     background-color: #fff;
     position: relative;
     opacity: 1;
-    transition: all .3s 0s cubic-bezier(.165, .84, .44, 1);
+    transition: all .25s 0s cubic-bezier(.165, .84, .44, 1);
   }
 
   .nav-lan .lan-select>li>a {
@@ -460,11 +462,11 @@
     cursor: pointer;
     opacity: 0.75;
     color: #264989;
-    transition: all .35s;
+    transition: all .25s;
   }
 
   .nav-search {
-    transition-duration: 0.35s;
+    transition-duration: 0.25s;
     transition-timing-function: ease-in;
   }
 
@@ -508,7 +510,7 @@
     outline: none;
     font-size: 16px;
     transition-property: background-color, color;
-    transition-duration: 0.5s;
+    transition-duration: 0.25s;
     transition-timing-function: ease-in-out;
   }
 
@@ -600,20 +602,19 @@
   .menu-item:hover {
     text-decoration: underline;
     color: #264989c5;
-    transition-duration: 0.35s;
+    transition-duration: 0.2s;
     transition-timing-function: ease-in-out;
     cursor: pointer;
   }
 
   .svg-down {
-    transition-duration: 0.35s;
+    transition-duration: 0.2s;
     transition-timing-function: ease-in-out;
   }
 
   .menu-item:hover>span>i {
-    transition: all .35s;
     transform: rotate(180deg);
-    transition-duration: 0.35s;
+    transition-duration: 0.2s;
     transition-timing-function: ease-out;
   }
 
@@ -658,7 +659,7 @@
     cursor: pointer;
     opacity: 0.75;
     color: #264989;
-    transition: all .35s;
+    transition: all .25s;
   }
 
   .nav-search .icon {
@@ -667,7 +668,7 @@
   }
 
   .nav-search {
-    transition-duration: 0.35s;
+    transition-duration: 0.25s;
     transition-timing-function: ease-in;
   }
 
@@ -717,7 +718,7 @@
     outline: none;
     font-size: 16px;
     transition-property: background-color, color;
-    transition-duration: 0.5s;
+    transition-duration: 0.25s;
     transition-timing-function: ease-in-out;
   }
 
@@ -730,9 +731,7 @@
     transition-timing-function: ease-in-out;
   }
 
-  .search-off{
-
-  }
+  .search-off {}
 
   .menu-item>ul {
     width: 100%;
@@ -740,7 +739,7 @@
     color: #333;
     margin: 0;
     padding: 0;
-    transition: all .6s 0s cubic-bezier(.165, .84, .44, 1);
+    transition: all .25s 0s cubic-bezier(.165, .84, .44, 1);
   }
 
   .menu-item>ul>li>a>i {
@@ -748,5 +747,6 @@
     padding-right: 8px;
     font-size: 13px;
   }
+
   /* 页面小于760 */
 }
