--- a/demo/css/web-end.css
+++ b/demo/css/web-end.css
@@ -1,59 +1,65 @@
-@media screen and (min-width:1200px) {
-  .map {
+@media screen and (min-width: 1200px) {
+  .map-container {
+    padding-top: 40px;
     width: 100%;
+  }
+
+  .map-height {
+    width: 100%;
+    height: 500px;
+  }
+
+  #map {
+    height: 100%;
+  }
+
+  /* footer-part */
+  .footer {
+    width: 100%;
+    height: 309px;
     background-image: url("./../imgs/tokey-1921.jpg");
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: top;
+    background-position: top center;
     background-attachment: fixed;
     position: relative;
   }
 
-  .map::after {
+  .footer::after {
     position: absolute;
     top: 0;
     left: 0;
     content: "";
     background-color: black;
-    opacity: 0.5;
+    opacity: 0.6;
     z-index: 1;
     width: 100%;
     height: 100%;
   }
 
-  .map-inner {
-    width: 90%;
-    height: 400px;
+  .footer .c-white {
+    color: #fff;
+  }
+
+  .footer-inner {
+    width: 95%;
+    z-index: 5;
+  }
+
+  .footer-inner h1 {
+    z-index: 5;
+  }
+  .footer__wrapper {
     display: flex;
-    flex-wrap: wrap;
-  }
-
-  .map-container {
-    padding-top: 40px;
-    height: 400px;
-    width: 70%;
-  }
-
-  .map-content {
-    height: 400px;
-    width: 30%;
-  }
-
-  .map-height {
-    width: 90%;
-    height: 320px;
-    border-radius: 5px;
-  }
-
-  #map {
-    height: 100%;
-    border-radius: 5px;
+    justify-content: space-between;
+    padding-top: 25px;
+    z-index: 5;
   }
 
   .content-text {
+    justify-content: flex-start;
     color: #fff;
-    padding-top: 100px;
-    /* padding-left: 10px;   */
+    z-index: 5;
   }
 
   .content-text h2 {
@@ -95,27 +101,7 @@
     transition-duration: 0.15s;
     transition-timing-function: ease-in-out;
   }
-
-  /* footer-part */
-  .footer {
-    padding-top: 40px;
-    padding-bottom: 40px;
-
-  }
-
-  .footer .c-white {
-    color: #fff;
-  }
-
-  .footer-inner {
-    width: 95%;
-  }
-
-  .footer__wrapper {
-    display: flex;
-    padding-top: 25px;
-  }
-
+  /* 
   .footer__links {
     margin: 0px;
     padding: 0;
@@ -138,36 +124,16 @@
   .footer__links {
     list-style: none;
   }
+ */
 
-
-
-  .footer a {
-    color: inherit;
-    text-decoration: none;
-  }
-
-  .footer__newsletter h6,
-  .footer__links h6 {
-    margin-bottom: 1.2rem;
-  }
-
-  .footer__newsletter p,
-  .footer__links a {
-    opacity: .5;
-    transition: opacity .3s ease-in-out;
-  }
-
-  .footer__links a:hover {
-    cursor: pointer;
-    opacity: 1;
-    transition: opacity .3s ease-in-out;
-  }
-
-  .footer__logo h1 {
-    margin: 0;
+  .footer__newsletter h6 {
+    font-size: 2rem;
+    margin-bottom: 32px;
   }
 
   .footer__newsletter p {
+    color: #fff;
+    font-size: 16px;
     margin-top: 1em;
     margin-bottom: 1em;
   }
@@ -175,11 +141,7 @@
   .footer__newsletter {
     justify-content: flex-end;
     margin: 0;
-    max-width: 300px;
-    order: 1;
-    padding-right: 25px;
-    margin-right: 25px;
-
+    max-width: 325px;
     /* 移动端要order:-1 使得此元素在首位 */
   }
 
@@ -188,18 +150,23 @@
     overflow: hidden;
   }
 
-  .newsletter.is-light input {
+  .newsletter input {
     color: #fff;
     border: 1px solid #fff;
     outline: none;
     background: transparent;
     /* background-color: #003149; */
-    padding: 1.6em 1.4em 1.7em;
+    padding: 8px;
     /* width: 80%; */
     width: 90%;
-
   }
-
+  .newsletter input:hover {
+    cursor: pointer;
+  }
+  .newsletter input::-webkit-input-placeholder {
+    /* WebKit browsers */
+    color: #fff;
+  }
   .newsletter {
     position: relative;
   }
@@ -226,7 +193,6 @@
     color: #fff;
   }
 
-
   /* footer 2 */
   .colophon__wrapper {
     width: 95%;
@@ -239,7 +205,7 @@
 
   .colophon__wrapper a {
     text-decoration: none;
-    color: #fff
+    color: #fff;
   }
 
   .colophon__social {
@@ -265,7 +231,7 @@
   }
 
   .colophon__links li {
-    border-right: 1px solid hsla(0, 0%, 100%, .5);
+    border-right: 1px solid hsla(0, 0%, 100%, 0.5);
     height: 14px;
     line-height: 1;
     width: auto;
@@ -283,31 +249,30 @@
   .colophon__social i {
     margin-top: 5px;
     font-size: 24px;
-    padding: .1rem .5rem;
+    padding: 0.1rem 0.5rem;
   }
 
   .colophon__wrapper {
     font-size: 14px;
     color: #fff;
-
   }
 
   .fade-out {
     opacity: 0.5;
-    transition-duration: .6s;
+    transition-duration: 0.6s;
     transition-property: opacity, -webkit-transform;
     transition-property: transform, opacity;
   }
 
   .fade-out:hover {
     opacity: 1;
-    transition-duration: .6s;
+    transition-duration: 0.6s;
     transition-property: opacity, -webkit-transform;
     transition-property: transform, opacity;
   }
 }
 
-@media screen and (max-width:1200px) and (min-width:760px) {
+@media screen and (max-width: 1200px) and (min-width: 760px) {
   .map {
     width: 100%;
     background-image: url("./../imgs/tokey-1921.jpg");
@@ -430,7 +395,6 @@
     margin: 0 auto;
   }
 
-
   .footer__links {
     width: 100%;
     list-style: none;
@@ -475,14 +439,14 @@
 
   .footer__newsletter p,
   .footer__links a {
-    opacity: .5;
-    transition: opacity .3s ease-in-out;
+    opacity: 0.5;
+    transition: opacity 0.3s ease-in-out;
   }
 
   .footer__links a:hover {
     cursor: pointer;
     opacity: 1;
-    transition: opacity .3s ease-in-out;
+    transition: opacity 0.3s ease-in-out;
   }
 
   .footer__logo h1 {
@@ -545,7 +509,7 @@
 
   .colophon__wrapper a {
     text-decoration: none;
-    color: #fff
+    color: #fff;
   }
 
   .colophon__social {
@@ -571,7 +535,7 @@
   }
 
   .colophon__links li {
-    border-right: 1px solid hsla(0, 0%, 100%, .5);
+    border-right: 1px solid hsla(0, 0%, 100%, 0.5);
     height: 14px;
     line-height: 1;
     width: auto;
@@ -589,31 +553,30 @@
   .colophon__social i {
     margin-top: 5px;
     font-size: 24px;
-    padding: .1rem .5rem;
+    padding: 0.1rem 0.5rem;
   }
 
   .colophon__wrapper {
     font-size: 14px;
     color: #fff;
-
   }
 
   .fade-out {
     opacity: 0.5;
-    transition-duration: .6s;
+    transition-duration: 0.6s;
     transition-property: opacity, -webkit-transform;
     transition-property: transform, opacity;
   }
 
   .fade-out:hover {
     opacity: 1;
-    transition-duration: .6s;
+    transition-duration: 0.6s;
     transition-property: opacity, -webkit-transform;
     transition-property: transform, opacity;
   }
 }
 
-@media screen and (max-width:760px) {
+@media screen and (max-width: 760px) {
   .map {
     width: 100%;
     background-image: url("./../imgs/tokey-1921.jpg");
@@ -646,7 +609,6 @@
   .map-container {
     width: 100%;
     z-index: 5;
-
   }
 
   .map-height {
@@ -712,7 +674,6 @@
   }
 
   /* map */
-
 
   .footer {
     padding-top: 50px;
@@ -786,14 +747,14 @@
 
   .footer__newsletter p,
   .footer__links a {
-    opacity: .5;
-    transition: opacity .3s ease-in-out;
+    opacity: 0.5;
+    transition: opacity 0.3s ease-in-out;
   }
 
   .footer__links a:hover {
     cursor: pointer;
     opacity: 1;
-    transition: opacity .3s ease-in-out;
+    transition: opacity 0.3s ease-in-out;
   }
 
   .footer__logo h1 {
@@ -820,7 +781,6 @@
     padding: 1.6em 1.4em 1.7em;
     /* width: 80%; */
     width: 100%;
-
   }
 
   .newsletter {
@@ -860,7 +820,7 @@
 
   .colophon__wrapper a {
     text-decoration: none;
-    color: #fff
+    color: #fff;
   }
 
   .colophon__links {
@@ -896,25 +856,24 @@
   .colophon__social i {
     margin-top: 5px;
     font-size: 24px;
-    padding: .1rem .5rem;
+    padding: 0.1rem 0.5rem;
   }
 
   .colophon__wrapper {
     font-size: 14px;
     color: #fff;
-
   }
 
   .fade-out {
     opacity: 0.5;
-    transition-duration: .6s;
+    transition-duration: 0.6s;
     transition-property: opacity, -webkit-transform;
     transition-property: transform, opacity;
   }
 
   .fade-out:hover {
     opacity: 1;
-    transition-duration: .6s;
+    transition-duration: 0.6s;
     transition-property: opacity, -webkit-transform;
     transition-property: transform, opacity;
   }
