--- a/demo/css/common.css
+++ b/demo/css/common.css
@@ -104,18 +104,16 @@ body {
   width: 158px;
 }
 
-
-
 @media screen and (min-width:1200px) {
 
   /* 深色主题按钮 */
   .btn-dark-blue {
     display: block;
-    color: #333;
-    padding: 0.5rem 1rem;
+    color: #fff;
+    padding: 0.5rem 1.5rem;
     border: 2px solid #264989c7;
     border-radius: 0.5rem;
-    background-color: #fff;
+    background-color: #264989;
     outline: none;
     font-size: 22px;
     transition-property: background-color, color;
@@ -130,11 +128,11 @@ body {
   /* 深色主题按钮 */
   .btn-dark-blue {
     display: block;
-    color: #333;
-    padding: 0.5rem 1rem;
+    color: #fff;
+    padding: 0.5rem 1.5rem;
     border: 2px solid #264989c7;
     border-radius: 0.5rem;
-    background-color: #fff;
+    background-color: #264989;
     outline: none;
     font-size: 22px;
     transition-property: background-color, color;
@@ -149,11 +147,11 @@ body {
   /* 深色主题按钮 */
   .btn-dark-blue {
     display: block;
-    color: #333;
-    padding: 0.5rem 1rem;
+    color: #fff;
+    padding: 0.5rem 1.5rem;
     border: 2px solid #264989c7;
     border-radius: 0.5rem;
-    background-color: #fff;
+    background-color: #264989;
     outline: none;
     font-size: 22px;
     transition-property: background-color, color;
@@ -165,8 +163,9 @@ body {
 
 .btn-dark-blue:hover {
   cursor: pointer;
-  color: #fff;
-  background-color: #264989;
+  color: #264989;
+  border: 2px solid #264989c7;
+  background-color: #fff;
   transition-property: background-color, color;
   transition-duration: 0.25s;
   transition-timing-function: ease-in-out;
