--- a/demo/css/header.css
+++ b/demo/css/header.css
@@ -227,7 +227,7 @@
     display: block;
     position: absolute;
     top: 80px;
-    left: 0;
+    left: -15px;
   }
 
   .nav-lan .lan-select>li>a:hover {
